# LocalTrans

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
src/localtrans_cli/: __init__.py  cli.py  translator.py
